# blog_auto_poster

./: .gitignore
a_engine/: .gitignore  README.md  pyproject.toml
a_engine/app/: config.py  main.py  scheduler.py
a_engine/app/clients/: b_engine_client.py  tmdb_client.py
a_engine/app/services/: collector.py  dedup_store.py  prompt_builder.py
a_engine/env/: .env.dev.example  .env.prod.example
blog_engine/: .gitignore  README.md  alembic.ini  pyproject.toml
blog_engine/alembic/: env.py
blog_engine/alembic/versions/: 0001_create_tables.py
blog_engine/app/: config.py  database.py  main.py  worker.py
blog_engine/app/models/: __init__.py  image.py  post.py
blog_engine/app/schemas/: request.py  response.py
blog_engine/app/services/: content_generator.py  html_renderer.py  image_engine.py  indexing_service.py  seo_engine.py  wordpress_publisher.py
blog_engine/app/templates/: ott_review.html
blog_engine/env/: .env.dev.example  .env.prod.example
docs/: A_AREA_NETFLIX_MODULE_DESIGN_v1.0.md  B_SERVER_DETAILED_DESIGN_v2.0.md
ott_gen/: README.md  pyproject.toml
ott_gen/app/: config.py  main.py  scheduler.py
ott_gen/app/clients/: b_engine_client.py  tmdb_client.py
ott_gen/app/services/: engine.py  overview_enricher.py  prompt_builder.py  store.py
ott_gen/app/web/: app.py  run.py
ott_gen/env/: .env.dev.example  .env.prod.example
wordpress_stack/: .env.example  .gitignore  README.md  docker-compose.yml
wordpress_stack/data/html/wp-content/themes/ott-trendy-lite/: archive.php  comments.php  footer.php  functions.php  header.php  home.php  index.php  search.php  searchform.php  single.php  style.css
wordpress_stack/data/html/wp-content/themes/ott-trendy-lite/assets/css/: main.css
wordpress_stack/data/html/wp-content/themes/ott-trendy-lite/template-parts/: content-card.php
wordpress_stack/mu-plugins/: allow-app-passwords-local.php
wordpress_stack/scripts/: wp-init.sh
