[project]
name = "ott-gen"
version = "0.1.0"
description = "OTT source queue + scheduled generation + manual web trigger"
authors = [{ name = "seungminsong", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.32.5"
pydantic-settings = "2.10.1"
apscheduler = "3.11.0"
fastapi = "0.116.1"
uvicorn = { version = "0.35.0", extras = ["standard"] }
openai = "1.102.0"
langchain-community = "0.3.30"
tavily-python = "0.7.12"
pymysql = "1.1.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
